examples/datalog/29_temporal/13_time_edge_cases.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_time_edge
Knowledge graph 'test_time_edge' created.
Switched to knowledge graph: test_time_edge
> .kg use test_time_edge
Switched to knowledge graph: test_time_edge
> current_time(T) :- T = time_now().
Script error: Query execution failed: Rule has no positive body atoms
